# trashfire

./: .gitignore  BENCHMARK.md  BENCHMARK_RUNNER.md  CHANGELOG.md  CLAUDE.md  COMPETITION.md  CONTRIBUTING.md  LEADERBOARD.html  LEADERBOARD.json  LEADERBOARD.md  LICENSE  README.md  run-benchmark.sh
.github/ISSUE_TEMPLATE/: benchmark-result.yml  config.yml  vault-feedback.yml
_manifests/: bob-the-ghost.enc  bone-song-rpc.enc  brink-deployer.enc  captain-dread-pipe.enc  carla-svelte.enc  cobb-dataforge.enc  day-of-the-tentacle.enc  dig-site-graphql.enc  elaine-marley-mesh.enc  fate-of-atlantis.enc  full-throttle.enc  governor-phatt-mobile.enc  griswold-locksmith.enc  grog-shop.enc  guybrush-ledger.enc  herman-toothrot-vue.enc  indy-fortune.enc  jojo-the-monkey.enc  largo-lagrande-lambda.enc  lechuck-crypt.enc  loom-weaver.enc  manny-travel.enc  melee-island-analytics.enc  monkey-wrench.enc  murrayd-signal.enc  otis-escape-room.enc  ozzie-mandrill-ml.enc  pegbiter-monitor.enc  phatt-island-chat.enc  porcelain-pirates.enc  purcell-vault.enc  sam-max-cases.enc  scumm-bar.enc  spiffy-anchor.enc  stan-glass-store.enc  stan-salesman.enc  tentacle-labs.enc  voodoo-queen.enc  wally-b-feed.enc  wally-feeds-flutter.enc  (+2 more)
_md/: Researching 2026 Scientific Landscape.docx  deep-research-report (14).md
_prompts/: base-review.md  project-context.ts
_scoring/: benchmark.ts  bundle-manifests.ts  create-blind-copy.sh  crypto.ts  encrypt-all.ts  extract-manifest.ts  fair-bench.ts  leaderboard.ts  multi-bench.ts  package.json  score.ts  strip-markers.sh  types.ts
bob-the-ghost/: Dockerfile  config.yaml  package.yaml  stack.yaml
bob-the-ghost/src/: Auth.hs  Database.hs  Main.hs  QR.hs  Types.hs
bone-song-rpc/: Dockerfile
bone-song-rpc/proto/: fleet.proto  gateway.proto
brink-deployer/: main.tf  outputs.tf  variables.tf
brink-deployer/scripts/: rotate-secrets.sh
captain-dread-pipe/: Project.toml
captain-dread-pipe/src/: app.jl
carla-svelte/: package.json  vite.config.ts
carla-svelte/src/: hooks.server.ts
cobb-dataforge/: dbt_project.yml
cobb-dataforge/macros/: security.sql
cobb-dataforge/tests/: test_data_quality.sql
day-of-the-tentacle/: mix.exs
dig-site-graphql/src/: config.ts
elaine-marley-mesh/: Cargo.toml  Dockerfile
elaine-marley-mesh/src/: config.rs  main.rs
elaine-marley-mesh/src/proxy/: handler.rs  load_balancer.rs  mod.rs  upstream.rs
elaine-marley-mesh/src/routing/: mod.rs
elaine-marley-mesh/src/tls/: cert_store.rs  mod.rs
fate-of-atlantis/: build.sbt
fate-of-atlantis/conf/: application.conf  routes
full-throttle/: Dockerfile
full-throttle/k8s/: rbac.yaml  secrets.yaml
griswold-locksmith/: pyproject.toml
griswold-locksmith/src/: __init__.py  auth.py  cli.py  config.py  crypto.py  db.py  models.py  sharing.py  sync.py  utils.py
griswold-locksmith/tests/: test_crypto.py
grog-shop/: .env.example  middleware.ts  package.json
grog-shop/lib/: auth.ts  db.ts  stripe.ts
guybrush-ledger/: Cargo.toml
guybrush-ledger/src/auth/: jwt.rs  middleware.rs
guybrush-ledger/src/db/: queries.rs
guybrush-ledger/src/routes/: admin.rs  auth.rs  mod.rs  portfolio.rs  tax.rs
guybrush-ledger/src/services/: wallet.rs
herman-toothrot-vue/: package.json
herman-toothrot-vue/src/: main.ts
jojo-the-monkey/islands/: CollectionView.tsx  SearchBar.tsx  SnippetEditor.tsx
jojo-the-monkey/routes/: index.tsx
largo-lagrande-lambda/: buildspec.yml  samconfig.toml  template.yaml
largo-lagrande-lambda/events/: test_event.json
lechuck-crypt/: CMakeLists.txt  vpn.conf.example
lechuck-crypt/include/: config.h  tunnel.h
lechuck-crypt/src/: logging.c  main.c  packet.c  routing.c
loom-weaver/: index.html
loom-weaver/css/: styles.css
loom-weaver/js/: api.js  auth.js  comments.js  media.js  posts.js  storage.js
manny-travel/server/: db.js  index.js
melee-island-analytics/: app.R  server.R
melee-island-analytics/R/: auth.R  export.R  upload.R
melee-island-analytics/api/: plumber.R
monkey-wrench/: Gemfile
murrayd-signal/: CMakeLists.txt  config.json
murrayd-signal/include/: protocol.h  session.h
murrayd-signal/src/: main.cpp
murrayd-signal/src/api/: http_server.cpp
murrayd-signal/src/broker/: broker.cpp
murrayd-signal/src/protocol/: serializer.cpp
murrayd-signal/src/storage/: db.cpp  timeseries.cpp
otis-escape-room/: docker-compose.yml  requirements.txt
ozzie-mandrill-ml/: docker-compose.yml  requirements.txt
ozzie-mandrill-ml/app/: config.py  main.py
pegbiter-monitor/: build.zig  config.toml
pegbiter-monitor/src/: alerting.zig  api.zig  config.zig  storage.zig
phatt-island-chat/: docker-compose.yml
phatt-island-chat/src/: config.ts
porcelain-pirates/: cpanfile  print_shop.conf
projects/bone-song-rpc/: go.mod
projects/captain-dread-pipe/: Dockerfile
projects/carla-svelte/: svelte.config.js
projects/fate-of-atlantis/: Dockerfile
projects/full-throttle/: main.go
projects/governor-phatt-mobile/: App.tsx
projects/grog-shop/: next.config.js
projects/herman-toothrot-vue/: index.html  vite.config.ts
projects/jojo-the-monkey/: deno.json  fresh.config.ts
projects/manny-travel/: package.json
projects/phatt-island-chat/: package.json
projects/purcell-vault/: Program.cs  PurcellVault.csproj
projects/sam-max-cases/: requirements.txt
projects/scumm-bar/: package.json
projects/spiffy-anchor/: .env
projects/stan-glass-store/: composer.json
projects/tentacle-labs/: config.py
projects/wally-feeds-flutter/: firebase.json
projects/woodtick-pipeline/: .env
projects/zak-mckracken/: index.php
purcell-vault/: Dockerfile
purcell-vault/Controllers/: AuditController.cs  AuthController.cs  SecretsController.cs
scumm-bar/: server.js
spiffy-anchor/: hardhat.config.ts  package.json
stan-glass-store/: .env.example
stan-salesman/: Dockerfile  build.gradle.kts
trashfire.io/: badge.html  build.sh  index.html  llm.md  package.json  vercel.json
wally-b-feed/: build.gradle.kts
woodtick-pipeline/: Dockerfile  docker-compose.yml
zak-mckracken/: .htaccess  composer.json
(+511 files in other folders)
